tdf#140967 docxexport: hairline is default and not a specific value

This effectively is treated as a zero,
although I didn't find any documentaiton that indicated
what is supposed to happen when a:ln has no w=.

Otherwise these numbers are normally in the thousands, and not "2".

Change-Id: I9dd6a334e88feb9a2bafe29f92229b6cfdff9747
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/135674
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>